Sono molto preso in giro

--- a/cognome_nome.html
+++ b/cognome_nome.html
@@ -22,7 +22,7 @@
   
 <center>
     <p>
-        <img src="gattino.jpg" width="300" height="320" align=middle hspace=20> 
+        <img src="immagine.jpg" width="300" height="320" align=middle hspace=20> 
         
         <table cellspacing=10px width=400>
             <tr>
@@ -30,7 +30,7 @@
                     <div><font size=5 face=Arial><b>Cognome:</b></font></div>
                 </td>
                 <td align=right>
-                    <div><font size=5 face=Arial><b>mioCognome</b></font></div>
+                    <div><font size=5 face=Arial><b>Perin</b></font></div>
                 </td>
             </tr>
             <tr>
@@ -38,7 +38,7 @@
                     <div><font size=5 face=Arial><b>Nome:</b></font></div>
                 </td>
                 <td align=right>
-                    <div><font size=5 face=Arial><b>mioNome</b></font></div>
+                    <div><font size=5 face=Arial><b>Kevin</b></font></div>
                 </td>
             </tr>
             <tr>
@@ -46,7 +46,7 @@
                      <div><font size=4 face=Arial>Data di nascita:</font></div>
                 </td>
                 <td align=right>
-                    <div><font size=4 face=Arial>01/01/2001</font></div>
+                    <div><font size=4 face=Arial>13/10/2003</font></div>
                 </td>
             </tr>
             <tr>
@@ -54,7 +54,7 @@
                      <div><font size=4 face=Arial>N° in elenco:</font></div>
                 </td>
                 <td align=right>
-                    <div><font size=4 face=Arial>01</font></div>
+                    <div><font size=4 face=Arial>10</font></div>
                 </td>
             </tr>
         </table>
