--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
             </td>
         </tr>
     <!--IL BLOCCO DA COPIARE É FINO A QUI. INSERIRLO QUI SOTTO-->
+        <tr>
+            <td align=center width=10%>
+                <font size=3>Perin</font>
+            </td>
+            <td align=center width=10%>
+                <font size=3>Kevin</font>
+            </td>
+            <td align=center width=5%>
+                <font size=3>5F</font>
+            </td>
+            <td align=center width=20% >
+                <font size=3><a href="nome_cognome.html">nome-cognome.html</a></font>
+            </td>
+        </tr>
     
     </table>
 </center>  
