Correzione piccola dimenticanza

--- a/perin_kevin.html
+++ b/perin_kevin.html
@@ -11,7 +11,7 @@
 
 <head>
     
-<center><font size=6 face=Arial color=blue><b>COGNOME NOME</b></font></center>
+<center><font size=6 face=Arial color=blue><b>PERIN KEVIN</b></font></center>
 
 </head>
 
