--- a/perin_kevin.html
+++ b/perin_kevin.html
@@ -22,7 +22,7 @@
   
 <center>
     <p>
-        <img src="immagine.jpg" width="300" height="320" align=middle hspace=20> 
+        <img src="perin_kevin_foto.jpg" width="300" height="320" align=middle hspace=20> 
         
         <table cellspacing=10px width=400>
             <tr>
